Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-07 (SVN):
    * hexenworld: Added the global variable con_forcedup for better
      compatibility with hexen2 code.

2011-12-03 (SVN):
    * Minor correction to the COMPILE document regarding DOS builds.
    * Updates to the 1.5.2 release notes file.

2011-12-03 (SVN):
    * snd_gus.c (S_GUS_Init): Added support for "-nogus" command line
      option to skip Gravis UltraSound initialization and return false.
      Patch suggested by Frank Sapone.
    * quakedef.h: updated beta date stamp to 2011-12-03.

2011-12-02 (SVN):
    * Updated the COMPILE document regarding DOS builds:  Frank Sapone
      confirmed successful compilation in native DOS/DJGPP environment.
    * Added new ReleaseNotes-1.5.2 document. Only a few entries for now,
      will grow as we move on.  Updated the rpm spec file.

2011-12-02 (SVN):
    * engine/hexenworld/server, model.c: Replaced SV_Error by Host_Error:
      we already have a macro defining Host_Error as SV_Error and this
      reduces the diff size between h2ded and hwsv versions of model.c.

2011-12-02 (SVN):
    * bumped versions for hexen2 engine to 1.25 and hexenworld to 0.25.
    * engine/hexenworld/server: model.c, model.h: Ported dedicated server
      model loader optimizations and cleanups from h2ded to hwsv.

2011-12-02 (SVN):
    * hexenworld: Moved shared/model.h under client and server separately
      so that the two can use customized versions of the header.  Edited
      the server version to remove structures and macros which have never
      been used.

2011-12-02 (SVN):
    * quakedef.h: updated beta date stamp to 2011-12-02.

2011-12-02 (SVN):
    * hexen2 dos port: Made the serial network driver a compile time option.
      Adjusted the use of the NET_USE_SERIAL macro.

2011-12-02 (SVN):
    * Small tidy-up in hexen2 and hexenworld Makefiles.

2011-12-02 (SVN):